--- a/packages/cli-frontend/public/manifest.json
+++ b/packages/cli-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Binoculog",
-  "name": "Binoculog",
+  "short_name": "Binocolo",
+  "name": "Binocolo",
   "icons": [
     {
       "src": "favicon.ico",
