--- a/packages/aws/package.json
+++ b/packages/aws/package.json
@@ -8,7 +8,9 @@
   },
   "typesVersions": {
     "*": {
-      "*": ["dist/*"]
+      "*": [
+        "dist/*"
+      ]
     }
   },
   "main": "index.js",
