--- a/packages/aws/package.json
+++ b/packages/aws/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/stefanomasini/binocolo#readme",
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.245.0",
+    "@aws-sdk/client-s3": "^3.245.0",
     "@binocolo/backend": "*",
     "@binocolo/common": "*",
     "typescript": "^4.9.4"
