--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -35,6 +35,7 @@
     "chalk": "^4.1.2",
     "commander": "^9.4.1",
     "conf": "^10.2.0",
+    "cross-spawn": "^7.0.3",
     "date-fns": "^2.29.3",
     "fastify": "^4.7.0",
     "http-errors": "^2.0.0",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
+    "@types/cross-spawn": "^6.0.2",
     "@types/http-errors": "^1.8.2",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.8.0",
