--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -21,14 +21,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stefanomasini/binocolo.git"
+    "url": "git+https://github.com/aramislab/binocolo.git"
   },
   "author": "Stefano Masini <stefano@stefanomasini.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/stefanomasini/binocolo/issues"
+    "url": "https://github.com/aramislab/binocolo/issues"
   },
-  "homepage": "https://github.com/stefanomasini/binocolo#readme",
+  "homepage": "https://github.com/aramislab/binocolo#readme",
   "dependencies": {
     "@binocolo/common": "*",
     "@fastify/static": "^6.6.0",
