--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -7,15 +7,15 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
+    "rootDir": "./src",
     "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
-    "rootDir": "./src",
     "strict": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
     "typeRoots": [ "node_modules/@types", "types" ],
     "skipLibCheck": true
   },
-  "exclude": [ "node_modules", "test", "types" ]
+  "exclude": [ "node_modules", "test", "types", "./dist/**/*" ]
 }
