--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -15,5 +15,5 @@
     "typeRoots": [ "node_modules/@types", "types" ],
     "skipLibCheck": true
   },
-  "exclude": [ "node_modules", "test", "types" ]
+  "exclude": [ "node_modules", "test", "types", "dist", "jest.config.ts" ]
 }
