--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,14 +24,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stefanomasini/binocolo.git"
+    "url": "git+https://github.com/aramislab/binocolo.git"
   },
   "author": "Stefano Masini <stefano@stefanomasini.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/stefanomasini/binocolo/issues"
+    "url": "https://github.com/aramislab/binocolo/issues"
   },
-  "homepage": "https://github.com/stefanomasini/binocolo#readme",
+  "homepage": "https://github.com/aramislab/binocolo#readme",
   "dependencies": {
     "@binocolo/common": "file:../common",
     "@floating-ui/react": "^0.16.0",
