--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "",
   "type": "module",
+  "files": [
+    "src/**/*",
+    "dist/**/*"
+  ],
   "exports": {
     "./*": "./dist/*"
   },
