--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,6 +6,10 @@
   "exports": {
     "./*": "./dist/*"
   },
+  "files": [
+    "src/**/*",
+    "dist/**/*"
+  ],
   "typesVersions": {
     "*": {
       "*": [
