--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "publish": "npm publish --access=public",
     "publish:dry-run": "npm publish --dry-run --access=public --workspace packages",
     "copy-frontend-bundle": "copyfiles --up 3 packages/cli-frontend/build/**/*.* packages/cli/frontend-build",
+    "build-frontend": "npm run build --workspace packages/cli-frontend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
