--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "copy-frontend-bundle": "copyfiles --up 3 packages/cli-frontend/build/**/*.* packages/cli/frontend-build",
     "frontend:build": "npm run build --workspace packages/cli-frontend",
     "frontend:watch": "npm start --workspace packages/cli-frontend",
+    "cli:dev": "npm run server-dev --workspace packages/cli",
     "cli:command": "npm run cli --workspace packages/cli --",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
