--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -47,7 +47,9 @@
     "chartjs-plugin-annotation": "^2.1.1",
     "chartjs-plugin-zoom": "^2.0.0",
     "chroma-js": "^2.4.2",
+    "clone-deep": "^4.0.1",
     "date-fns-tz": "^1.3.7",
+    "deep-equal": "^2.2.0",
     "lodash.debounce": "^4.0.8",
     "millify": "^5.0.1",
     "mobx": "^6.7.0",
@@ -59,6 +61,8 @@
   },
   "devDependencies": {
     "@types/chroma-js": "^2.1.4",
+    "@types/clone-deep": "^4.0.1",
+    "@types/deep-equal": "^1.0.1",
     "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.11.18",
     "@types/styled-components": "^5.1.26",
