--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "publish:dry-run": "npm publish --dry-run --access=public --workspace packages",
     "copy-frontend-bundle": "copyfiles --up 3 packages/cli-frontend/build/**/*.* packages/cli/frontend-build",
     "frontend:build": "npm run build --workspace packages/cli-frontend",
+    "frontend:build-for-release": "npm run clean:dist --workspace packages/cli-frontend && npm run frontend:build && npm run clean:frontend-build --workspace packages/cli && npm run copy-frontend-bundle",
     "frontend:watch": "npm start --workspace packages/cli-frontend",
     "cli:dev": "npm run server-dev --workspace packages/cli",
     "cli:command": "npm run cli --workspace packages/cli --",
