--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@binocolo/cli",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "files": [
     "src/**/*",
     "dist/**/*",
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "clean:dist": "rimraf dist",
+    "clean:frontend-build": "rimraf frontend-build",
     "compile": "tsc",
     "check-compilation": "tsc --noEmit",
     "cli": "node dist/main.js",
