--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "binocolo-monorepo",
   "version": "1.1.0",
   "description": "",
+  "engines": {
+      "node": "18",
+      "npm": "9"
+  },
   "scripts": {
     "format": "prettier --config .prettierrc --write --check \"packages/*/src/**/*.ts\" \"packages/*/src/**/*.tsx\"",
     "clean": "tsc --build --clean && npm run clean:dist",
